set(HEADER_LIST)
set(SOURCE_LIST)
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/*.hpp")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/role/*.hpp")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/proto/*.h")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/util/*.hpp")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/persistence/*.hpp")
file(GLOB SOURCE_LIST ${SOURCE_LIST}  "${PaxosLib_SOURCE_DIR}/src/*.cpp")
file(GLOB SOURCE_LIST ${SOURCE_LIST}  "${PaxosLib_SOURCE_DIR}/src/proto/*.cc")
add_library(paxoslib_library ${SOURCE_LIST} ${HEADER_LIST})
LINK_LIBRARIES(pthread protobuf leveldb)
target_include_directories(paxoslib_library PUBLIC ../include)
target_include_directories(paxoslib_library PUBLIC ../include/paxoslib/proto)
target_compile_features(paxoslib_library PUBLIC cxx_std_11)
set_source_files_properties("${PaxosLib_SOURCE_DIR}/src/uint64comparator.cpp" PROPERTIES COMPILE_FLAGS -fno-rtti)
source_group(TREE "${PROJECT_SOURCE_DIR}/include" PREFIX "Header Files" FILES ${HEADER_LIST})
add_executable(test "${PaxosLib_SOURCE_DIR}/app/test.cpp" "${PaxosLib_SOURCE_DIR}/app/kvsm.hpp" "${PaxosLib_SOURCE_DIR}/app/kvclient.hpp" "${PaxosLib_SOURCE_DIR}/app/kvsm.pb.cc")
TARGET_LINK_LIBRARIES(paxoslib_library leveldb)
TARGET_LINK_LIBRARIES(test paxoslib_library rocksdb dl)