set(HEADER_LIST)
set(SOURCE_LIST)
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/*.hpp")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/role/*.hpp")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/proto/*.h")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/util/*.hpp")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/persistence/*.hpp")
file(GLOB HEADER_LIST ${HEADER_LIST} "${PaxosLib_SOURCE_DIR}/include/paxoslib/eventloop/*.hpp")
file(GLOB SOURCE_LIST ${SOURCE_LIST}  "${PaxosLib_SOURCE_DIR}/src/*.cpp")
file(GLOB SOURCE_LIST ${SOURCE_LIST}  "${PaxosLib_SOURCE_DIR}/src/proto/*.cc")
SET(CMAKE_CXX_FLAGS "-Wall -fPIC")
add_library(paxoslib SHARED ${SOURCE_LIST} ${HEADER_LIST})
LINK_LIBRARIES(pthread protobuf leveldb)
target_include_directories(paxoslib PUBLIC ../include)
target_include_directories(paxoslib PUBLIC ../include/paxoslib/proto)
target_compile_features(paxoslib PUBLIC cxx_std_11)
set_source_files_properties("${PaxosLib_SOURCE_DIR}/src/uint64comparator.cpp" PROPERTIES COMPILE_FLAGS -fno-rtti)
source_group(TREE "${PROJECT_SOURCE_DIR}/include" PREFIX "Header Files" FILES ${HEADER_LIST})
add_executable(test "${PaxosLib_SOURCE_DIR}/app/test.cpp" "${PaxosLib_SOURCE_DIR}/app/kvsm.hpp" "${PaxosLib_SOURCE_DIR}/app/kvclient.hpp" "${PaxosLib_SOURCE_DIR}/app/kvsm.pb.cc")
TARGET_LINK_LIBRARIES(paxoslib leveldb)
TARGET_LINK_LIBRARIES(test paxoslib rocksdb dl)
INSTALL(TARGETS paxoslib LIBRARY DESTINATION lib)
INSTALL(FILES "${PaxosLib_SOURCE_DIR}/include/paxoslib/proto/config.pb.h" DESTINATION include/paxoslib/proto/)
INSTALL(FILES "${PaxosLib_SOURCE_DIR}/include/paxoslib/statemachine.hpp" DESTINATION include/paxoslib/)
INSTALL(FILES "${PaxosLib_SOURCE_DIR}/include/paxoslib/node.hpp" DESTINATION include/paxoslib/)